--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,1 @@
-spring.application.name=Ecommerce MVP
-# PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_mvp
-spring.datasource.username=kn
-spring.datasource.password=nahid
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# JWT Configuration
-app.jwt.secret=mySecretKeyForEcommerceMVPApplication
-app.jwt.expiration=86400000
-
-# Server Configuration
-server.port=8080
+spring.application.name=shopease
