chore: Update database connection settings in application.properties and remove unused import in JpaUserRepository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=shopease
 
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/shopease
-spring.datasource.username=kn
-spring.datasource.password=kn123
+spring.datasource.url=jdbc:postgresql://ep-floral-mode-a1lybk4q-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_9sVSNZXi4ybQ
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
