updated login and added product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=shopease
 
+app.jwt.secret=some-very-long-and-secure-secret-key-for-jwt-at-least-32-chars-long
+app.jwt.expiration=86400000
 
 # Database Configuration
 spring.datasource.url=jdbc:postgresql://ep-floral-mode-a1lybk4q-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
