feat: Add SSLCommerz configuration for sandbox mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,23 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# SSLCommerz Configuration (Sandbox - Replace with production values)
+sslcommerz.store-id=knah168917a0975b2e
+sslcommerz.store-password=knah168917a0975b2e@ssl
+sslcommerz.api-url=https://sandbox.sslcommerz.com
+sslcommerz.success-url=http://localhost:8080/api/payments/success
+sslcommerz.fail-url=http://localhost:8080/api/payments/fail
+sslcommerz.cancel-url=http://localhost:8080/api/payments/cancel
+sslcommerz.ipn-url=http://localhost:8080/api/payments/ipn
+sslcommerz.sandbox=true
+
+# SSLCommerz Configuration (Sandbox Mode)
+sslcommerz.store-id=testbox
+sslcommerz.store-password=qwerty
+sslcommerz.api-url=https://sandbox.sslcommerz.com
+sslcommerz.success-url=http://localhost:8080/api/payments/success
+sslcommerz.fail-url=http://localhost:8080/api/payments/fail
+sslcommerz.cancel-url=http://localhost:8080/api/payments/cancel
+sslcommerz.ipn-url=http://localhost:8080/api/payments/ipn
+sslcommerz.sandbox=true
